// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactARTComponents should generate a <Shape> where top radius is 0 if the sum of the top radius is greater than width 1`] = `
<Shape
  d={
    {
      "_pivotX": 0,
      "_pivotY": 0,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": 0,
      "penDownY": 0,
      "penX": 0,
      "penY": 0,
    }
  }
  height={40}
  radiusTopLeft={26}
  radiusTopRight={25}
  width={50}
/>
`;
exports[`ReactARTComponents should generate a <Shape> with a radius property of 0 when bottom left radius prop is negative 1`] = `
<Shape
  d={
    {
      "_pivotX": 0,
      "_pivotY": 0,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": 0,
      "penDownY": 0,
      "penX": 0,
      "penY": 0,
    }
  }
  height={50}
  radiusBottomLeft={-25}
  width={50}
/>
`;
exports[`ReactARTComponents should generate a <Shape> with a radius property of 0 when bottom right radius prop is negative 1`] = `
<Shape
  d={
    {
      "_pivotX": 0,
      "_pivotY": 0,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": 0,
      "penDownY": 0,
      "penX": 0,
      "penY": 0,
    }
  }
  height={50}
  radiusBottomRight={-30}
  width={50}
/>
`;
exports[`ReactARTComponents should generate a <Shape> with a radius property of 0 when top left radius prop is negative 1`] = `
<Shape
  d={
    {
      "_pivotX": 0,
      "_pivotY": 0,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": 0,
      "penDownY": 0,
      "penX": 0,
      "penY": 0,
    }
  }
  height={50}
  radiusTopLeft={-25}
  width={50}
/>
`;
exports[`ReactARTComponents should generate a <Shape> with a radius property of 0 when top right radius prop is negative 1`] = `
<Shape
  d={
    {
      "_pivotX": 0,
      "_pivotY": 0,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": 0,
      "penDownY": 0,
      "penX": 0,
      "penY": 0,
    }
  }
  height={50}
  radiusTopRight={-25}
  width={50}
/>
`;
exports[`ReactARTComponents should generate a <Shape> with positive height when height prop is negative 1`] = `
<Shape
  d={
    {
      "_pivotX": 0,
      "_pivotY": -50,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": 0,
      "penDownY": -50,
      "penX": 0,
      "penY": -50,
    }
  }
  height={-50}
  width={50}
/>
`;
exports[`ReactARTComponents should generate a <Shape> with positive width when width prop is negative 1`] = `
<Shape
  d={
    {
      "_pivotX": -50,
      "_pivotY": 0,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": -50,
      "penDownY": 0,
      "penX": -50,
      "penY": 0,
    }
  }
  height={50}
  width={-50}
/>
`;
exports[`ReactARTComponents should generate a <Shape> with props for drawing the Circle 1`] = `
<Shape
  d={
    {
      "_pivotX": 0,
      "_pivotY": -10,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": null,
      "penDownY": -10,
      "penX": 0,
      "penY": -10,
    }
  }
  fill="blue"
  radius={10}
  stroke="green"
  strokeWidth={3}
/>
`;

exports[`ReactARTComponents should generate a <Shape> with props for drawing the Rectangle 1`] = `
<Shape
  d={
    {
      "_pivotX": 0,
      "_pivotY": 0,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": 0,
      "penDownY": 0,
      "penX": 0,
      "penY": 0,
    }
  }
  fill="blue"
  height={50}
  stroke="green"
  width={50}
/>
`;

exports[`ReactARTComponents should generate a <Shape> with props for drawing the Wedge 1`] = `
<Shape
  d={
    {
      "_pivotX": 0,
      "_pivotY": 50,
      "path": [
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": null,
      "penDownY": 50,
      "penX": 0,
      "penY": 50,
    }
  }
  endAngle={360}
  fill="blue"
  outerRadius={50}
  startAngle={0}
/>
`;
